feat: "load more", score, remove job for which the user already applied
